adding data.json

--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -44,10 +44,10 @@
         <div>Educational level</div>
         <div>
           <select name="education_level">
-            <option value="high_school" selected>High school</option>
-            <option value="university_education">University education</option>
-            <option value="master_degree">Master</option>
-            <option value="doctorate_degree">Doctorate degree</option>
+            <option value="high school" selected>High school</option>
+            <option value="university education">University education</option>
+            <option value="master degree">Master</option>
+            <option value="doctorate degree">Doctorate degree</option>
           </select>
         </div>
       </div>
