structuing data view

--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -71,7 +71,7 @@
         <div>
           <input 
             type="text" 
-            name="services"
+            name="expertises"
             placeholder="Separate each expertise area with a comma"
           >
         </div>
