teachers/show finished

--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -14,7 +14,7 @@
 
       <div class="item">
         <div>Age</div>
-        <div>{{ teacher.birth }}</div>
+        <div>{{ teacher.age }}</div>
       </div>
 
       <div class="item">
