--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -40,6 +40,8 @@
         <div>Since</div>
         <div>{{ teacher.created_at }}</div>
       </div>
+
+      <button href="#" type="submit">Edit</button>
     </section>
   </div>
 {% endblock content %}
