formating education_level data with graduation function

--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -44,10 +44,10 @@
         <div>Educational level</div>
         <div>
           <select name="education_level">
-            <option value="high school" selected>High school</option>
-            <option value="university education">University education</option>
-            <option value="master degree">Master</option>
-            <option value="doctorate degree">Doctorate degree</option>
+            <option value="school" selected>High school</option>
+            <option value="university">University education</option>
+            <option value="master">Master</option>
+            <option value="doctorate">Doctorate degree</option>
           </select>
         </div>
       </div>
@@ -56,11 +56,11 @@
         <div>Class type</div>
         <div>
           <span>
-            <input type="radio" name="class_type" value="presential" checked>
+            <input type="radio" name="class_type" value="Presential" checked>
             Presential
           </span>
           <span>
-            <input type="radio" name="class_type" value="distance">
+            <input type="radio" name="class_type" value="Distance">
             Distance
           </span>
         </div>
