create function to edit a teacher

--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -41,7 +41,7 @@
         <div>{{ teacher.created_at }}</div>
       </div>
 
-      <button href="#" type="submit">Edit</button>
+      <a href="/teachers/{{ teacher.id }}/edit" class="button">Edit</a>
     </section>
   </div>
 {% endblock content %}
