--- a/public/style.css
+++ b/public/style.css
@@ -196,7 +196,8 @@ input::placeholder {
   padding-left: 5px;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
   padding: 8px 32px;
   background-color: var(--color-fenix);
   border-radius: 4px;
@@ -205,4 +206,11 @@ button[type="submit"] {
   font-weight: bold;
   color: white;
   font-size: 18px;
+}
+
+a.button {
+  display: block;
+  box-sizing: border-box;
+  text-align: center;
+  text-decoration: none;
 }
