--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/instructors">
+<form class="card" method="POST" action="/teachers?_method=PUT">
   <section class="avatar" style="background: url(https://source.unsplash.com/collection/3465564/500x500) no-repeat center center / cover">
   </section>
   <section class="details">
@@ -11,7 +11,7 @@
 
     {% include 'teachers/fields.njk' %}
 
-
+    <input type="hidden" name="id" value="{{ teacher.id }}">
 
   </section>
 </form>
