--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -1,19 +1,26 @@
 {% extends 'layout.njk' %}
 
 {% block content %}
+<div class="card">
 
-<form class="card" method="POST" action="/teachers?_method=PUT">
   <section class="avatar" style="background: url(https://source.unsplash.com/collection/3465564/500x500) no-repeat center center / cover">
   </section>
+
   <section class="details">
 
-    <h3>Edit teacher</h3>
+  <form method="POST" action="/teachers?_method=PUT">
 
-    {% include 'teachers/fields.njk' %}
+      <h3>Edit teacher</h3>
 
-    <input type="hidden" name="id" value="{{ teacher.id }}">
+      {% include 'teachers/fields.njk' %}
+
+      <input type="hidden" name="id" value="{{ teacher.id }}"> 
+  </form>
+
+  <form id="form-delete" action="/teachers?_method=DELETE" method="POST">
+    <button type="submit">Delete</button>
+  </form>
 
   </section>
-</form>
-
+</div>
 {% endblock content %}
