--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,44 +1,27 @@
 {% extends 'layout.njk' %}
 
 {% block content %}
-  <div class="card">
-    <section class="avatar" style="background: url(https://source.unsplash.com/collection/10553730/600x600) no-repeat center center /cover">
-    </section>
-
-    <section class="details">
-      <h3>Details</h3>
-      <div class="item">
-        <div>Name</div>
-        <div>Júlio César</div>
-      </div>
-
-      <div class="item">
-        <div>Age</div>
-        <div>21</div>
-      </div>
-
-      <div class="item">
-        <div>Educational level</div>
-        <div>Bachelor</div>
-      </div>
-
-      <div class="item">
-        <div>Class type</div>
-        <div>Distance</div>
-      </div>
-
-      <div class="item">
-        <div>Accompaniment</div>
-        <div>
-          <span>Mathematics</span>
-          <span>Programming language</span>
-        </div>
-      </div>
-
-      <div class="item">
-        <div>Since</div>
-        <div>02/07/2020</div>
-      </div>
-    </section>
+  <div class="card table-container">
+    <table width="100%">
+      <thead>
+        <tr>
+          <th>Teacher</th>
+          <th>Accompaniment</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <span style="background-image: url({{ instructor.avatar_url }})" ></span>
+            Julio
+          </td>
+          <td id="expertises">
+            <p>Mathematics</p>
+          </td>
+          <td><a href="/instructors">ver</a></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 {% endblock content %}
