adjusting button href

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,7 +18,7 @@
           <div class="separation"></div>
           <div class="links">
             <a href="/" class="">Teachers</a>
-           <a href="/portfolio" class="">Students</a>
+           <a href="/students" class="">Students</a>
          </div>
         </nav>
 
