changing the links

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -17,7 +17,7 @@
           <img src="/logo-header.png" alt="" width="200px">
           <div class="separation"></div>
           <div class="links">
-            <a href="/" class="">Teachers</a>
+            <a href="/teachers" class="">Teachers</a>
            <a href="/students" class="">Students</a>
          </div>
         </nav>
@@ -30,6 +30,8 @@
     {% block content %}
 
     {% endblock %}
+
+    <script src="/scripts.js"></script>
 
   </body>
 </html>
