--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
   <div class="card table-container">
+    <a href="/teachers/create">New</a>
     <table width="100%">
       <thead>
         <tr>
