stylizing NEW button

--- a/public/style.css
+++ b/public/style.css
@@ -269,7 +269,8 @@ tbody tr td:first-child span {
   border: 2px solid var(--color-fenix);
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
   background-color: var(--color-fenix);
   padding: 8px 16px;
   text-decoration: none;
@@ -277,6 +278,11 @@ tbody tr td:last-child a {
   color: white;
   font-size: 12px;
   border-radius: 4px;
+}
+
+.table-container > a {
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .table-container thead tr th:last-child,
