--- a/views/students/index.njk
+++ b/views/students/index.njk
@@ -6,31 +6,22 @@
     <table width="100%">
       <thead>
         <tr>
-          <th>Teacher</th>
-          <th>Accompaniment</th>
+          <th>student</th>
+          <th>Email</th>
+          <th>School Year</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        {% for teacher in teachers %}
+        {% for student in students %}
         <tr>
           <td>
-            <span style="background-image: url({{ teacher.avatar_url }})" ></span>
-            {{ teacher.name }}
+            <span style="background-image: url({{ student.avatar_url }})" ></span>
+            {{ student.name }}
           </td>
-          <td id="expertises">
-
-            {% for expertise in teacher.expertises.slice(0, 4) %}
-              {% if loop.index0 >= 3 %}
-                <p>...</p>
-              {% endif %}
-              {% if loop.index0 < 3 %}
-                <p>{{ expertise }}</p>
-              {% endif %}
-            {% endfor %}
-
-          </td>
-          <td><a href="/teachers/{{ teacher.id }}">ver</a></td>
+          <td>{{ student.email }}</td>
+          <td>{{ student.school_year }}</td>
+          <td><a href="/students/{{ student.id }}">ver</a></td>
         </tr>
         {% endfor %}
       </tbody>
