--- a/views/students/create.njk
+++ b/views/students/create.njk
@@ -6,6 +6,8 @@
     </section>
 
     <section class="details">
+      <h3>New student</h3>
+      
       {% include 'students/fields.njk' %}
     </section>
   </form>
