--- a/views/students/fields.njk
+++ b/views/students/fields.njk
@@ -6,6 +6,7 @@
             type="url" 
             name="avatar_url"
             placeholder="http://"
+            value="{{ student.avatar_url }}"
           >
         </div>
       </div>
@@ -17,6 +18,7 @@
             type="text" 
             name="name"
             placeholder="Student name"
+            value="{{ student.name }}"
           >
         </div>
       </div>
@@ -24,10 +26,11 @@
       <div class="item">
         <div>Email</div>
         <div>
-          <input 
+          <input  
             type="email" 
             name="email"
             placeholder="Student email"
+            value="{{ student.email }}"
           >
         </div>
       </div>
@@ -37,7 +40,8 @@
         <div>
           <input 
             type="date" 
-            name="birth" 
+            name="birth"
+            value="{{ student.birth }}" 
           >
         </div>
       </div>
@@ -47,13 +51,13 @@
         <div>
           <select name="school_year">
             <option value="5EF" {% if student.school_year == "5EF" %} selected {% endif %}>5th year of Elementary School</option>
-            <option value="5EF" {% if student.school_year == "6EF" %} selected {% endif %}>6th year of Elementary School</option>
-            <option value="5EF" {% if student.school_year == "7EF" %} selected {% endif %}>7th year of Elementary School</option>
-            <option value="5EF" {% if student.school_year == "8EF" %} selected {% endif %}>8th year of Elementary School</option>
-            <option value="5EF" {% if student.school_year == "9EF" %} selected {% endif %}>9th year of Elementary School</option>
-            <option value="5EF" {% if student.school_year == "1EM" %} selected {% endif %}>1st year of High School</option>
-            <option value="5EF" {% if student.school_year == "2EM" %} selected {% endif %}>2nd Year of High School</option>
-            <option value="5EF" {% if student.school_year == "3EM" %} selected {% endif %}>3rd Year of High School</option>
+            <option value="6EF" {% if student.school_year == "6EF" %} selected {% endif %}>6th year of Elementary School</option>
+            <option value="7EF" {% if student.school_year == "7EF" %} selected {% endif %}>7th year of Elementary School</option>
+            <option value="8EF" {% if student.school_year == "8EF" %} selected {% endif %}>8th year of Elementary School</option>
+            <option value="9EF" {% if student.school_year == "9EF" %} selected {% endif %}>9th year of Elementary School</option>
+            <option value="1EM" {% if student.school_year == "1EM" %} selected {% endif %}>1st year of High School</option>
+            <option value="2EM" {% if student.school_year == "2EM" %} selected {% endif %}>2nd Year of High School</option>
+            <option value="3EM" {% if student.school_year == "3EM" %} selected {% endif %}>3rd Year of High School</option>
           </select>
         </div>
       </div>
@@ -64,6 +68,7 @@
           <input 
             type="number" 
             name="workload"
+            value="{{ student.workload }}"
           >
         </div>
       </div>
