--- a/views/students/show.njk
+++ b/views/students/show.njk
@@ -23,6 +23,11 @@
       </div>
 
       <div class="item">
+        <div>Birth Day</div>
+        <div>{{ student.birth }}</div>
+      </div>
+
+      <div class="item">
         <div>School Year</div>
         <div>{{ student.school_year }}</div>
       </div>
