--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
 
-  <section class="avatar" style="background: url(https://source.unsplash.com/collection/3465564/500x500) no-repeat center center / cover">
+  <section class="avatar" style="{{ student.avatar_url }}">
   </section>
 
   <section class="details">
