--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -40,8 +40,8 @@
         <div>
           <input 
             type="date" 
-            name="birth"
-            value="{{ student.birth }}" 
+            name="birth_date"
+            value="{{ student.birth_date }}" 
           >
         </div>
       </div>
