--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -24,7 +24,7 @@
 
       <div class="item">
         <div>Birth Day</div>
-        <div>{{ student.birth }}</div>
+        <div>{{ student.birth_date }}</div>
       </div>
 
       <div class="item">
