--- a/src/app/views/teachers/fields.njk
+++ b/src/app/views/teachers/fields.njk
@@ -27,8 +27,8 @@
   <div>
     <input 
       type="date" 
-      name="birth"
-      value="{{ teacher.birth }}" 
+      name="birth_date"
+      value="{{ teacher.birth_date }}" 
     >
   </div>
 </div>
@@ -64,9 +64,9 @@
   <div>
     <input 
       type="text" 
-      name="expertises"
+      name="subjects_taught"
       placeholder="Separate each expertise area with a comma"
-      value="{{ teacher.expertises }}"
+      value="{{ teacher.subjects_taught }}"
     >
   </div>
 </div>
