feat: ManyToAny relationship with Student to Teacher

--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -39,6 +39,13 @@
         </div>
       </div>
 
+      <div class="item">
+        <div>Student of</div>
+        <div>
+          {{ student.teacher_name }}
+        </div>
+      </div>
+
       <a href="/students/{{ student.id }}/edit" class="button">Edit</a>
     </section>
   </div>
