--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -72,6 +72,19 @@
           >
         </div>
       </div>
+
+      <div class="item">
+        <div>Teacher</div>
+        <div>
+          <select name="teacher">
+          {% for teacher in teachersOptions %}
+            <option value="{{ teacher.id }}" {% if student.teacher_id == teacher.id %} selected {% endif %}>
+              {{ teacher.name }}
+            </option>
+          {% endfor %}
+          </select>
+        </div>
+      </div>
       
 
     <button type="submit">Save</button>
