--- a/public/style.css
+++ b/public/style.css
@@ -303,3 +303,34 @@ td:last-child {
   text-transform: uppercase;
   font-size: 12px;
 }
+
+/* FILTERS */
+
+.table-container .header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.table-container .header a {
+  margin: 0;
+  width: 120px;
+  margin-bottom: 32px;
+}
+
+.table-container .header form {
+  display: grid;
+  grid-template-columns: 1fr 120px;
+  align-items: center;
+  grid-gap: 8px;
+}
+
+.table-container .header form input {
+  border: 1px solid var(--color-body);
+  padding: 4px 8px;
+  box-sizing: border-box;
+}
+
+.table-container .header form button {
+  margin: 0;
+}
