--- a/public/style.css
+++ b/public/style.css
@@ -334,3 +334,33 @@ td:last-child {
 .table-container .header form button {
   margin: 0;
 }
+
+/* pagination */
+
+.table-container {
+  display: grid;
+  grid-template: 64px 1fr 16px / 1fr;
+}
+
+.table-container .header {
+  margin: 0;
+  align-self: start;
+}
+
+.table-container .pagination {
+  margin: 0;
+  align-self: end;
+  justify-self: center;
+}
+
+.pagination a,
+.pagination span {
+  color: var(--color-body);
+  text-decoration: none;
+  margin-right: 16px;
+}
+
+.pagination a:hover {
+  filter: brightness(2);
+  border-bottom: 1px solid var(--color-body);
+}
