--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -49,5 +49,12 @@
         {% endfor %}
       </tbody>
     </table>
-  </div>
+
+    <div class="pagination"
+      data-page={{ pagination.page }}
+      data-total={{ pagination.total }}
+      data-filter={{ filter }}
+    >
+    </div>
+</div>
 {% endblock content %}
